Add report type manager and refactor reporting
Introduces `ReportType`/`ReportTypeManager` to load and validate report type definitions from config at startup, and wires initialization through `Main`. Refactors report flow to use the new type model in the selection GUI, renames report fields from player to target for clarity, and updates related placeholder/lang/item utility usage to match the new structure.